# manjusaka

./: Cargo.toml  README.md  build.rs  conf.toml
certs/: server.crt  server.key
plug_demo/: Cargo.toml  build.rs  plug.proto
plug_demo/.cargo/: config
plug_demo/src/: lib.rs  plug.rs
plugin_demo/: Cargo.toml  build.rs
plugin_demo/src/: lib.rs
plugins/: npc
