[package]
name = "npc2"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
debug = 0
opt-level = "z"     
lto = true         
codegen-units = 1   
panic = "abort"

[dependencies]
tokio = {version = "1", features = ["full"]}
rand_core = { version = "*", features = ["getrandom", "std"] }
serde = { version = "1", features = ["derive"] }
aws-lc-rs = { version = "1.13", features = ["prebuilt-nasm"] }
rand = {version = "0.7", features=["std"] }
uuid = { version = "1.18", features = ["v4"] }
russh = "0.54"
russh-keys = "0.49"
russh-sftp = "2.1"
anyhow = "1"
pin-project = "1.1.3"
snowstorm = "0.3"
fast-socks5 = "0.9"
tokio-yamux = "0.3.5"
x25519-dalek = "1.1.1"
prost = "0.14"
futures = "0.3"
sha1 = "0.10"
whoami = "0.9"
log = "*"
obfstr = "*"
tracing-subscriber = "*"
rustvncserver  = {version="*",path="./libs/rustvncserver"}
enigo = {version="*",path="./libs/enigo"}

[target.'cfg(unix)'.dependencies]
close_fds = "0.3.2"
nix = { version = "0.27.1", features = ["ioctl", "process", "signal", "term"] }

[target.'cfg(windows)'.dependencies]
conpty = "0.7.0"
screenshots = "0.6"
windows = { version = "0.58.0", features = [
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_NetworkManagement_WindowsFirewall",
    "Win32_System_LibraryLoader",
    "Win32_Security",
    "Win32_NetworkManagement_WindowsFilteringPlatform",
    "Win32_System_Rpc",
] }

[build-dependencies]
prost-build = "0.14"

