[package]
name = "plug_test_nps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = "s"     # Optimize for size.
lto = true         # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.


[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]


[dependencies]
protobuf = "2.27.1"

[build-dependencies]
protobuf-codegen-pure = "2.27.1"
